Bug 138020 - LibreOffice improperly formats text tables that span multiple pages where the first row is configured to repeat on each page.
Summary: LibreOffice improperly formats text tables that span multiple pages where the...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-11-05 18:59 UTC by Andrew Moore
Modified: 2026-03-20 11:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX with multi-page table (61.10 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-11-05 19:00 UTC, Andrew Moore
Details
The working .doc file (127.50 KB, application/msword)
2020-11-05 21:31 UTC, Andrew Moore
Details
DOCX resaved in MSO without "repeat as header row" (74.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-11-09 12:59 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Moore 2020-11-05 18:59:45 UTC
Description:
Given a .docx file with a multi-page table configured to have the header row repeat on every page, the table isn't rendered correctly when importing to LibreOffice and converting to PDF. This can be fixed manually in Libre by stepping over the table and going to 'Table -> Properties... and unchecking the "Repeat heading" option.

Steps to Reproduce:
1.Open a .docx file with a multi-page table with LibreOffice.
2.Observe that the table isn't rendered correctly.
3.

Actual Results:
The table isn't rendered like the original .docx file in Word.

Expected Results:
The table should be rendered exactly like the original .docx file in Word.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.1.2
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 16; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Andrew Moore 2020-11-05 19:00:44 UTC
Created attachment 167044 [details]
DOCX with multi-page table
Comment 2 Andrew Moore 2020-11-05 21:31:01 UTC
I tried this by converting the document to a .doc (Word 97-2004) format and the tables render correctly in the document.
Comment 3 Andrew Moore 2020-11-05 21:31:30 UTC
Created attachment 167046 [details]
The working .doc file
Comment 4 Timur 2020-11-09 12:59:08 UTC
Created attachment 167135 [details]
DOCX resaved in MSO without "repeat as header row"

I confirm the bug with LO 7.1+. 5 pages table opens on a single page. Seems inherited from OO.

I attach DOCX resaved in MSO without "repeat as header row" (and without some irrelevant text). 
It opens OK in LO after ace6bbf3da9ae27aca87865b6be887a3aed341fc from bug 64264.
Comment 5 QA Administrators 2022-11-10 04:03:10 UTC Comment hidden (obsolete, spam)
Comment 6 Justin L 2023-06-03 22:36:37 UTC
repro 7.6+. This is not a floating table.
Comment 7 stragu 2024-05-30 16:09:20 UTC
Reproduced with:

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6084962f93efc005b6827edceae12d3170f17ccd
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

For some reason, the table is imported with Repeat header set to 6 rows. If one changes the value to 1 row, saves and reloads, the table is displayed properly.

The original file opened in MS 365 web doesn't repeat the heading, even in PDF export. Could someone provide a screenshot of expected look and the "Repeat as header row at the top of each page" setting in MS 365 desktop?
Comment 8 Justin L 2026-03-19 12:02:26 UTC
repro 26.8+. 

From sw/source/writerfilter/dmapper/DomainMapperTableManager.cxx:
FIXME: DOCX tables with more than 10 repeating header lines imported
without repeating header lines to mimic an MSO workaround for its usability bug.
Explanation: it's very hard to set and modify repeating header rows in Word,
often resulting tables with a special workaround: setting all table rows as
repeating header, because exceeding the pages by "unlimited" header rows turns off the
table headers automatically in MSO. 10-row limit is a reasonable temporary limit
to handle DOCX tables with "unlimited" repeating header, till the same "turn off
exceeding header" feature is ready (see tdf#88496).
Comment 9 Commit Notification 2026-03-20 11:19:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f431a2b02fbe85bd6e83491e5bcb26149df325c3

tdf#138020 writerfilter: ignore tblHeader when all rows are header

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-03-20 11:19:43 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6ac2bdbda1b4222d098df4bbe2b43b8729ff7790

tdf#138020 writerfilter: always apply firstRow style if is tblHeader

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-03-20 11:19:45 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e9bf6ad2f5150aa93e90fd09cb885bfc21653477

related tdf#138020 writerfilter: ignore tblLook for undefined styles

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.