tdf#138020 writerfilter: ignore tblHeader when all rows are header

While tdf#88496 and friends did this for tables with 10 or more rows,
the idea is valid for all cases - since each row could be tall.
Plus AFAICS that hack is obsolete anyway,
since the bug report it is referring to is marked as fixed.

In LO, it is not possible to mark all rows as header.

So just fix the documents (which are broken by design I guess)
and give them some sensible values.

Yay for emulation. DOCX doesn't have a "do not split table" setting,
but if the first paragraph of the first column of every row
is set to "keep with next paragraph',
then the table emulates no splitting.

So with all this emulation going on,
the round-tripped document still looks the same in MS Word and LO.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf138020_all_rows_tblHeader

Change-Id: I60851e8cc78a727efdcd930202245ff062df8fe2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202213
Tested-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>